# Stroke-Prediction

./: README.md  Stroke_Prediction.ipynb  Stroke_Prediction1.ipynb  Stroke_Prediction_EDA.ipynb  Stroke_Prediction_Opt.ipynb  Stroke_Prediction_RobustScaler.ipynb  Stroke_Prediction_RobustScaler_Encoder.ipynb  Stroke_Prediction_RobustScaler_Engl.ipynb  Stroke_Prediction___RobustScaler.ipynb  Stroke_Prediction_other_version.ipynb  app.py  pyproject.toml  requirements.txt
model/: LogisticRegression.pkl  RandomForestClassifier.pkl  encoder.pkl  scaler.pkl
notebooks/: Stroke_Prediction_RobustScaler_Engl.ipynb
