[tool.poetry]
name = "stroke-prediction"
version = "0.1.0"
description = ""
authors = ["MariiaSam <kontragent@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
imbalanced-learn = "^0.13.0"
streamlit = "^1.43.1"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
